--- a/math/src/components/Calculator.css
+++ b/math/src/components/Calculator.css
@@ -1,19 +1,24 @@
 .container {
-  background: rgb(22, 20, 20);
   top: 50%;
   left: 50%;
   right: 50%;
   margin: 0 auto;
   width: 300px;
   text-align: center;
-  border: 1px solid black;
-  border-radius: 5px;
+  background-color: rgb(189, 182, 182);
 }
 
 .keys {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: minmax(40px, auto);
+  
+}
+
+.keys button {
+  border: none;
+  outline: none;
+  border: 1px solid rgb(189, 182, 182);;
 }
 
 .operator {
@@ -22,10 +27,11 @@
 
 .display {
   height: 45px;
+  margin-bottom: 0;
   line-height: 45px;
   color: #fff;
   display: inline-block;
-  width: 296px;
+  width: 100%;
   overflow: hidden;
   background-color: rgb(189, 182, 182);
   border: none;
@@ -33,6 +39,10 @@
   text-align: right;
   font-size: 20px;
   font-weight: 500;
+}
+
+.zero {
+  grid-column: 1 / 3
 }
 
 input::-webkit-outer-spin-button,
