--- a/math/src/components/Calculator.css
+++ b/math/src/components/Calculator.css
@@ -1,14 +1,11 @@
-
 .container {
-  background: rgb(22, 20, 20);
   top: 50%;
   left: 50%;
   right: 50%;
   margin: 0 auto;
   width: 300px;
   text-align: center;
-  border: 1px solid black;
-  border-radius: 5px;
+  background-color: rgb(189, 182, 182);
 }
 
 .keys {
@@ -17,16 +14,26 @@
   grid-template-rows: minmax(40px, auto);
 }
 
+.zero {
+  grid-column: 1 / 3;
+}
+
+.keys button {
+  outline: none;
+  border: 1px solid rgb(189, 182, 182);
+}
+
 .operator {
-  background-color: orange;
+  background-color: rgb(255, 136, 0);
 }
 
 .display {
   height: 45px;
+  margin-bottom: 0;
   line-height: 45px;
   color: #fff;
   display: inline-block;
-  width: 296px;
+  width: 100%;
   overflow: hidden;
   background-color: rgb(189, 182, 182);
   border: none;
